Fix styling of autoacks alert on small screen sizes

--- a/src/SmartComponents/Recs/List.scss
+++ b/src/SmartComponents/Recs/List.scss
@@ -1,5 +1,4 @@
 .ins-c-recommendations-header {
-    white-space: nowrap;
     width: auto;
     .pf-c-title {
         display:inline-block;
@@ -10,5 +9,13 @@
     .alertOverride {
         font-size: var(--pf-global--FontSize--md);
         margin-top: var(--pf-global--spacer--lg);
+    }
+    @media only screen and (max-width: 585px) {
+        .pf-c-title {
+            display: block;
+        }
+        .alertOverride {
+            margin-top: var(--pf-global--spacer--sm);
+        }
     }
 }
